--- a/style.css
+++ b/style.css
@@ -193,9 +193,11 @@ utility > utility
 }
 
 main {
+    width: 90%;
     max-width: 960px;
     margin: 0 auto;
 }
+
 
 div {
     margin-top: 16px;
